# square-survivors

./: .dockerignore  .gitignore  Dockerfile.linux  README.md  build_exe.py  build_linux.ps1  index.html  pyproject.toml  run_game.py
.agents/rules/: architecture-guideline.md
.agents/workflows/: walkthrough-update.md
.user/: initial_prompt.md
src/square_survivor/: __init__.py  constants.py  game_states.py  main.py
src/square_survivor/configs/: debug_settings.json  difficulty.json  display.json  enemies.json  player.json  ui_theme.json  upgrades.json  world.json  xp_orbs.json
src/square_survivor/core/: config_manager.py  engine.py  input_system.py  states.py
src/square_survivor/entities/: __init__.py  base_entity.py  enemy.py  player.py  xp_orb.py
src/square_survivor/entities/weapons/: base_weapon.py  explosion.py  healing_magic.py  saturn_square.py  sprint_magic.py
src/square_survivor/models/: __init__.py  base_config.py  debug_config.py  difficulty_config.py  display_config.py  enemy_config.py  player_config.py  ui_config.py  upgrade_models.py  world_config.py  xp_orb_config.py
src/square_survivor/states/: __init__.py  base.py  game_over.py  level_up.py  menu.py  pause.py  play.py
src/square_survivor/systems/: __init__.py  combat_system.py  map_generator.py  upgrade_system.py  wave_manager.py
src/square_survivor/systems/upgrade_system/: __init__.py  base_upgrade.py  explosion_upgrades.py  player_upgrades.py  saturn_rings_upgrades.py  settings_upgrades.py
src/square_survivor/ui/: __init__.py  components.py
