[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "square-survivor"
version = "2.3.0"
authors = [{ name = "Lavariall" }]
description = "A 2D Top-Down Roguelike Survival Game built with pygame-ce."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygame-ce>=2.5.0",
    "pydantic>=2.0"
]

[project.scripts]
square-survivor = "square_survivor.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
square_survivor = ["configs/*.json"]
